# TextAnalalyticsPaper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Notebooks/: lyrics_chord_scrapping.ipynb
scripts/: experiments.py  experiments_fast.py  experiments_full.py  lyrics_chord_scrapping.py  plot.py
