[tool.poetry]
name = "programming text-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python =  ">=3.8"
numpy = "^1.24.2"
pandas = "^1.5.3"
textdistance = "^4.5.0"
tqdm = "^4.65.0"
joblib = "^1.2.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
